@@ -296,6 +296,35 @@ LIBSMDEV_EXTERN int libsmdev_handle_get_bytes_per_sector(
                      uint32_t *bytes_per_sector,
                      libsmdev_error_t **error );
 
+/* Retrieves the media type
+ * Returns the 1 if succesful or -1 on error
+ */
+LIBSMDEV_EXTERN int libsmdev_handle_get_media_type(
+                     libsmdev_handle_t *handle,
+                     uint8_t *media_type,
+                     libsmdev_error_t **error );
+
+/* Retrieves the bus type
+ * Returns the 1 if succesful or -1 on error
+ */
+LIBSMDEV_EXTERN int libsmdev_handle_get_bus_type(
+                     libsmdev_handle_t *handle,
+                     uint8_t *bus_type,
+                     libsmdev_error_t **error );
+
+/* Retrieves an information value specified by the identifier
+ * The strings are encoded in UTF-8
+ * The value size should include the end of string character
+ * Returns 1 if successful, 0 if value not present or -1 on error
+ */
+LIBSMDEV_EXTERN int libsmdev_handle_get_information_value(
+                     libsmdev_handle_t *handle,
+                     const uint8_t *information_value_identifier,
+                     size_t information_value_identifier_length,
+                     uint8_t *information_value,
+                     size_t information_value_size,
+                     libsmdev_error_t **error );
+
 /* Retrieves the amount of read/write error retries
  * Returns the 1 if succesful or -1 on error
  */
